--- a/Website/Site/templates/home.html
+++ b/Website/Site/templates/home.html
@@ -8,7 +8,7 @@
     <h3>Wer sind die Airsoft Scorpions Jena e.V.</h3>
     <p>Die „Airsoft Scorpions Jena“ (kurz *ASJ*) sind ein „kleines“ Team, aus dem schönen Thüringen. Unser Verein hat sich 2019, aus einem kleinem Haufen Airsoft verrückter, gegründet.</p>
     <p>Mittlerweile haben wir 50+ Mitglieder – diese kommen aus Jena, Weimar, Erfurt und Umgebung.</p><br />
-    <button onclick="loadImg('01')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/01-min.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button>
+    <button onclick="loadImg('01')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/01.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button>
     <br /><br /><br />
     <h3>Aktivitäten</h3>
     <p>Wir sind ein sehr aktives Team...</p>
