--- a/Website/Site/templates/kontakt.html
+++ b/Website/Site/templates/kontakt.html
@@ -30,18 +30,24 @@
       <dt>
         <h3>Telefon:</h3>
       </dt>
-      <dd><a href="tel:+49 15679577325" style="font-size: 1.3rem;">+49 15679577325</a></dd><br />
+      <dd>
+        <button class="btn btn-secondary">
+          <a href="tel:+49 15679577325" style="text-decoration: none;" class="light">+49 15679577325</a>
+        </button>
+      </dd>
+      <br />
       <dt>
         <h3>EMail:</h3>
       </dt>
       <dd>
         <p>
-          <a href="mailto:scorpionsjena@gmail.com">scorpionsjena@gmail.com</a>
+          <button class="btn btn-secondary">
+            <a href="mailto:scorpionsjena@gmail.com" style="text-decoration: none;" class="light">scorpionsjena@gmail.com</a>
+          </button>
         </p>
       </dd><br />
       <dt>
         <h3>Wegbeschreibung:</h3>
-        <p>Um den Inhalt anzuzeigen müssen die verwendeten Cookies akzeptiert werden.</p>
       </dt>
       <dd>
         <div class="container-fluid c-cookie-div">
