--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -11,11 +11,11 @@
     <p>Einem spielreichen Wochenende steht so nichts mehr im Wege.</p>
     <br />
     <h3>2019</h3><br />
-    <button onclick="loadImg('37')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/37-min.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
+    <button onclick="loadImg('03')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/03.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
     <h3>Heute</h3><br />
-    <button onclick="loadImg('34')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/34-min.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
+    <button onclick="loadImg('07')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/07.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
     <h3>Szenario:</h3><br />
-    <button onclick="loadImg('24')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/24-min.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
+    <button onclick="loadImg('06')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/06.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button><br /><br />
     <p>Ein kleiner Konvoi nicht gekennzeichneter Fahrzeuge ist in einem kleinen Dorf liegen geblieben...</p><br />
     <h3>Geländetyp:</h3>
     <p>Urban/CQB</p><br />
