--- a/Website/Site/templates/wias.html
+++ b/Website/Site/templates/wias.html
@@ -19,7 +19,18 @@
     <p>Ein Transport zwischen eigener Wohnung und einem Feld, auf dem das spielen erlaubt ist, hat deshalb in einem abgeschlossenen Behältnis zu erfolgen.</p>
     <p>Die verwendeten „Waffen“ verschießen ihre Kügelchen mit einer Mündungsenergie zwischen 0,3 Joule und 3,0 Joule. Sie bleiben damit weit unter der Mündungsenergie eines Luftgewehrs. Trotzdem gelten für alle Airsoftwaffen mit einer Mündungsenergie von mehr als 0,5 Joule die gleichen gesetzlichen Bestimmungen, wie für ein Luftgewehr mit einer sehr viel höheren Mündungsenergie.</p>
     <p>Um das Verletzungsrisiko während des Sports zu minimieren sind auf allen Feldern strenge Spielregeln in Kraft. Schutzausrüstung für Augen und Gesicht sind meistens Pflicht. Außerdem gelten meistens, je nach Mündungsenergie, Mindestabstände.</p>
-    <br />
+    <br/>
+
+    <div class="row">
+      <div class="col-md-6" style="display: grid;">
+        <button onclick="loadImg('08')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal" style="align-items: center;"><img src="{% static 'img/08.jpg' %}" alt="Ladefehler" class="" style="height: 500px;" /></button>
+      </div>
+      <div class="col-md-6" style="display: grid;">
+        <button onclick="loadImg('09')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal" style="align-items: center;"><img src="{% static 'img/09.jpg' %}" alt="Ladefehler" class=" " style="height: 500px;" /></button>
+      </div>
+    </div>
+
+    <br>
     <h3>Wie läuft ein Spieltag ab?</h3>
     <ul>
       <li>Ab 9:00 Uhr Anreise</li>
@@ -31,5 +42,17 @@
       <li>14 Uhr Spielstart Runde 2</li>
       <li>17 Uhr Spielende (gerne auch mit kleiner Verlängerung)</li>
     </ul>
+  </div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="img-modal" tabindex="-1" aria-labelledby="imgmodalLabel" aria-hidden="true" style="width: 100%;">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body" id="img-modal">
+          <img class="w-100" src="#" alt="Ladefehler" />
+        </div>
+      </div>
+    </div>
   </div>
 {% endblock %}
