added 403 handling, updated mw

--- a/Website/Site/templates/404.html
+++ b/Website/Site/templates/404.html
@@ -2,5 +2,5 @@
 {% block content %}
     <h1>ERROR 404: Not Found</h1>
 
-    <p>oops, die eingegebene URL existiert nicht.</p>
+    <p>OOops, die eingegebene URL existiert nicht.</p>
 {% endblock %}
