--- a/Website/Site/templates/layout.html
+++ b/Website/Site/templates/layout.html
@@ -39,7 +39,7 @@
             <div class="col-10">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <button class="btn btn-secondary"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/home">Home</a></button>
+                  <button class="btn btn-secondary"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/">Home</a></button>
                 </li>
                 <li class="nav-item">
                   <button class="btn btn-secondary"><a class="nav-link fs-5 px-3 light" href="/wias">Was ist Airsoft?</a></button>
