fixed kontakt, Kalender, layout

--- a/Website/Site/templates/kalender.html
+++ b/Website/Site/templates/kalender.html
@@ -27,7 +27,7 @@
       <p style="font-weight: bold;">Um diese Inhalte zu Laden müssen die Verwendeten Cookies akzeptiert werden.</p>
     </div>
     <div class="layer2">
-      <iframe style="width: 1250.67px; height: 215px; border: none;" data-src="https://www.wetter.de/widget/3tage/u1pfrz71/false/" data-cookiescript="accepted"></iframe><br /><a href="https://www.wetter.de/wetter/r/9206494" rel="nofollow" target="_blank">Wetter in Berlstedt</a>
+      <iframe style="width: 100%; height: 215px; border: none;" data-src="https://www.wetter.de/widget/3tage/u1pfrz71/false/" data-cookiescript="accepted"></iframe><br /><a href="https://www.wetter.de/wetter/r/9206494" rel="nofollow" target="_blank">Wetter in Berlstedt</a>
     </div>
   </div>
 {% endblock %}
