--- a/Website/Site/templates/impressum.html
+++ b/Website/Site/templates/impressum.html
@@ -2,38 +2,39 @@
 {% load static %}
 
 {% block content %}
-  <h2>Impressum</h2><br />
-
-  <h3>Inhalt:</h3>
-  <div id="anchors" style="margin-left: 20px;">
-    <button class="btn btn-secondary my-2" style="width: 20rem;"><a class="light" style="text-decoration: none;" href="#vorstand-anchor">Vorstand und Registereintrag</a></button><br />
-    <button class="btn btn-secondary my-2" style="width: 20rem;"><a class="light" style="text-decoration: none;" href="#inhalt-anchor">Haftung für Inhalte</a></button><br />
-    <button class="btn btn-secondary my-2" style="width: 20rem;"><a class="light" style="text-decoration: none;" href="#links-anchor">Haftung für Links</a></button><br />
-    <button class="btn btn-secondary my-2" style="width: 20rem;"><a class="light" style="text-decoration: none;" href="#ur-anchor">Urheberrecht</a></button>
-  </div>
-  <br /><br />
-  <h3 id="vorstand-anchor">Vertreten durch die Vorstände</h3>
-  <ul>
-    <li>David Näthe</li>
-    <li>Paul Hopfgarten</li>
-    <li>Philipp Risch</li>
-  </ul>
+  <h2>Impressum</h2>
+  <p>Angaben gemäß § 5 DDG</p>
+  <p>Airsoft Scorpions Jena e.V. <br> c/o Paul Hopfgarten <br> Ottmannshausen 36 B <br> 99439 Am Ettersberg</p>
+  <p>
+    <h3>Vertreten durch:</h3>
+    Paul Hopfgarten<br />
+    David Näthe<br />
+    Philipp Risch<br />
+  </p>
+  <p>
+    <h3>Kontakt:</h3>
+    Telefon: <a href="tel:+49 15679577325"> +49 15679577325</a>
+    <br />E-Mail: <a href="mailto:scorpionsjena@gmail.com">scorpionsjena@gmail.com</a>
+  </p>
+  <p>
+    <h3>Registereintrag:</h3>
+    Eintragung im Registergericht: Jena
+    <br />Registernummer: VR 231706<br />
+  </p>
+  <p>
+    <h3>Aufsichtsbehörde:</h3>
+    Musteraufsicht Musterstadt<br />
+  </p>
+  <p>
+    <h3>Haftungsausschluss:</h3><br>
+    <h3>Haftung für Inhalte</h3>
+    Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 DDG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 DDG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen. <br><br> <h3>Haftung für Links</h3>
+    Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.<br /> <br> <h3>Urheberrecht</h3>
+    Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.<br /> <br><h3>Datenschutz</h3>
+    Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. <br />
+    Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. <br />
+    Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.<br />
+  </p>
   <br />
-  <h3>Registereintrag:</h3>
-  <p>Eintragung im Vereinsregister.</p>
-  <p>Registergericht: Jena</p>
-  <p>Registernummer: VR 231706</p>
-
-  <br /><br />
-  <h3 id="inhalt-anchor">Haftung für Inhalte</h3>
-  <br />
-  <p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-  <br /><br />
-  <h3 id="links-anchor">Haftung für Links</h3>
-  <br />
-  <p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-  <br /><br />
-  <h3 id="ur-anchor">Urheberrecht</h3>
-  <br />
-  <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+  Impressum von <a href="https://impressum-generator.de" rel="dofollow">Impressum-Generator.de</a>. Powered by <a href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Franziska Hasselbach, Bonn</a>.
 {% endblock %}
