--- a/Website/Site/templates/wias.html
+++ b/Website/Site/templates/wias.html
@@ -31,16 +31,17 @@
     </div>
 
     <br>
-    <h3>Wie läuft ein Spieltag ab?</h3>
+    <h3>Wie läuft ein normaler Spieltag bei uns ab?</h3>
     <ul>
       <li>Ab 9:00 Uhr Anreise</li>
       <li>Anmeldung</li>
-      <li>Ausgabe der Leihausrüstung (bei Bdraf - gegen hinterlegen des Ausweises)</li>
+      <li>Ausgabe der Leihausrüstung (bei Bedarf mit vorheriger Anmeldung: Ausgabe der Leihausrüstung gegen hinterlegung eines Ausweisdokumentes)</li>
       <li>Aufrödeln der Waffen und Cronen</li>
-      <li>10 Uhr Spielstart Runde 1 (Erklärung der Spielregeln, Teamaufteilung)</li>
+      <li>10 Uhr Spielstart (Erklärung der Spielregeln, Teamaufteilung)</li>
       <li>13 Uhr gemeinsame Mittagspause</li>
-      <li>14 Uhr Spielstart Runde 2</li>
+      <li>14 Uhr Weitere Spielrunden</li>
       <li>17 Uhr Spielende (gerne auch mit kleiner Verlängerung)</li>
+      <li>die angegebenen Zeiten sind Richtwerte und können Sich Situationsbedingt ändern.</li>
     </ul>
   </div>
 
