--- a/Website/Site/templates/downloads.html
+++ b/Website/Site/templates/downloads.html
@@ -79,7 +79,7 @@
 
     <p>An unseren "Offenen Spieltagen" gibt es Unterschriftenlisten, ein Ausdruck der hier bereitgestellten Unterlagen ist somit nicht zwingend notwendig. Die Bereitstellung dient zur Information vorab.</p>
     <p>>>> Ausnahme: Unsere Einverständniserklärung U18 (der sog. "Muttizettel") - diese bitte zu Hause ausdrucken, ausfüllen und zum Spieltag mitbringen!!!</p>
-    <p>Mit deiner Unterschrift an unseren Spieltagen, verpflichtest du dich die jeweils aktuellen Stände unseres Regelwerkes zu kennen...</p>
+    <p>Mit deiner Unterschrift an unseren Spieltagen, verpflichtest du dich, die jeweils aktuellen Stände unseres Regelwerkes zu kennen...</p>
   </div>
 
   <br>
