--- a/Website/Site/templates/interessiert.html
+++ b/Website/Site/templates/interessiert.html
@@ -5,7 +5,7 @@
   <div class="c-downloads">
     <h2>Interessiert?</h2><br />
     <h3>Wir haben euch neugierig gemacht ?</h3>
-    <p>KOMMT GERN VORBEI - zum zuschauen und/oder zum mitmachen, für interessierte, neue Spieler (ab 14 Jahren) haben wir Schutzausrüstung und Leihwaffen (unter und über 0,5 Joule) begrenzt verfügbar.</p>
+    <p>KOMMT GERN VORBEI - zum zuschauen und/oder zum mitmachen. Für interessierte oder neue Spieler (ab 14 Jahren) haben wir Schutzausrüstung und Leihwaffen (unter und über 0,5 Joule) begrenzt verfügbar.</p>
     <p>Diese bitte bei der Anmeldung zum Spieltag reservieren, eine kurze Nachricht, über einen unserer Kanäle genügt dafür.</p>
     <h3>Downloads um Mitglied zu werden:</h3>
     <p>Ihr wollt zum Team der Scorpions gehören ? Ihr seid Herzlich Willkommen... Druckt euch bitte unseren Mitgliedsantrag aus, füllt ihn vollständig aus, schickt ihn uns per Email oder bringt den Antrag zum nächsten Spieltag mit und gebt ihn persönlich ab.</p><br />
