--- a/Website/Site/templates/layout.html
+++ b/Website/Site/templates/layout.html
@@ -190,14 +190,14 @@
                   </a>
                 </button>
               </div>
-              <div class="col-lg">
+              {% comment %} <div class="col-lg">
                 <button class="btn btn-secondary w-100">
                   <a href="https://discord.gg" target="_blank">
                     <img src="{% static 'img/discord-logo-min.png' %}" alt="Ladefehler" style="height: 5rem;" />
                     <p class="visually-hidden">Discord</p>
                   </a>
                 </button>
-              </div>
+              </div> {% endcomment %}
             </div>
           </div>
         </div>
