--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -5,9 +5,9 @@
   <div>
     <h2>Das Gelände</h2><br />
     <h3>Willkommen auf unserem „Ambush Site“-Gelände.</h3><br />
-    <p>Als Verein haben wir uns einen ehemaligen Trapschießplatz gepachtet. Durch die nette Unterstützung unseres ortsansässigen Verpächters, der Containerdienst Pfaffe GmbH konnten wir aus dem Schießstand ein kleines Airsoft-Gelände machen.</p>
-    <p>Das Gelände zeichnet sich durch eine gute Infrastruktur aus. So sind feste Sanitäranlagen vorhanden und die Versorgung ist durch den in unmittelbarer Nähe befindlichen REWE- Supermarkt gesichert.</p>
-    <p>Für HPA-Spieler gibt es einen Hochdruck-Kompressor zum auffüllen der Flaschen.</p>
+    <p>Als Verein haben wir einen ehemaligen Trapschießplatz gepachtet. Durch die nette Unterstützung unseres ortsansässigen Verpächters, der Containerdienst Pfaffe GmbH, konnten wir aus dem Schießstand ein kleines Airsoft-Gelände machen.</p>
+    <p>Das Gelände zeichnet sich durch eine gute Infrastruktur aus. So sind feste Sanitäranlagen vorhanden und die Versorgung ist durch den in unmittelbarer Nähe befindlichen REWE-Supermarkt gesichert.</p>
+    <p>Für HPA-Spieler gibt es einen Hochdruckkompressor zum Auffüllen der Flaschen.</p>
     <p>Einem spielreichen Wochenende steht so nichts mehr im Wege.</p>
     <br />
     <h3>2019</h3><br />
