kontakt discord temporär removed

--- a/Website/Site/templates/kontakt.html
+++ b/Website/Site/templates/kontakt.html
@@ -50,9 +50,9 @@
         <div class="col-lg">
           <button class="btn w-100"><a href="https://www.youtube.com/@AirsoftScorpions" target="_blank"><img class="sm-icons" src="{% static 'img/yt-logo-min.png' %}" alt="Ladefehler" style="height: 5rem;" /></a></button>
         </div>
-        <div class="col-lg">
+        {% comment %} <div class="col-lg">
           <button class="btn w-100"><a href="https://discord.gg" target="_blank"><img class="sm-icons" src="{% static 'img/discord-logo-min.png' %}" alt="Ladefehler" style="height: 5rem;" /></a></button>
-        </div>
+        </div> {% endcomment %}
       </div>
     </dl>
   </div>
